[package]
name = "zenoh_random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = "3.2.23"
env_logger = "0.10.0"
futures = "0.3.28"
rand = "0.8.5"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch="master" }
